; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/core/extr_dc_link.c_link_create.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/core/extr_dc_link.c_link_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_link = type { i32 }
%struct.link_init_data = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dc_link* @link_create(%struct.link_init_data* %0) #0 {
  %2 = alloca %struct.dc_link*, align 8
  %3 = alloca %struct.link_init_data*, align 8
  %4 = alloca %struct.dc_link*, align 8
  store %struct.link_init_data* %0, %struct.link_init_data** %3, align 8
  %5 = load i32, i32* @GFP_KERNEL, align 4
  %6 = call %struct.dc_link* @kzalloc(i32 4, i32 %5)
  store %struct.dc_link* %6, %struct.dc_link** %4, align 8
  %7 = load %struct.dc_link*, %struct.dc_link** %4, align 8
  %8 = icmp eq %struct.dc_link* null, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %21

10:                                               ; preds = %1
  %11 = load %struct.dc_link*, %struct.dc_link** %4, align 8
  %12 = load %struct.link_init_data*, %struct.link_init_data** %3, align 8
  %13 = call i32 @construct(%struct.dc_link* %11, %struct.link_init_data* %12)
  %14 = icmp eq i32 0, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  br label %18

16:                                               ; preds = %10
  %17 = load %struct.dc_link*, %struct.dc_link** %4, align 8
  store %struct.dc_link* %17, %struct.dc_link** %2, align 8
  br label %22

18:                                               ; preds = %15
  %19 = load %struct.dc_link*, %struct.dc_link** %4, align 8
  %20 = call i32 @kfree(%struct.dc_link* %19)
  br label %21

21:                                               ; preds = %18, %9
  store %struct.dc_link* null, %struct.dc_link** %2, align 8
  br label %22

22:                                               ; preds = %21, %16
  %23 = load %struct.dc_link*, %struct.dc_link** %2, align 8
  ret %struct.dc_link* %23
}

declare dso_local %struct.dc_link* @kzalloc(i32, i32) #1

declare dso_local i32 @construct(%struct.dc_link*, %struct.link_init_data*) #1

declare dso_local i32 @kfree(%struct.dc_link*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
